--- a/content.css
+++ b/content.css
@@ -1,5 +1,5 @@
-body {
-    background-image: url(/images/flag2.jpg);
+body {.
+    background-image: url(./images/flag2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
